--- a/README
+++ b/README
@@ -1,5 +1,6 @@
+FlashFit version 0.1
+--------------------
+
 FlashFit interpretes data measured by oscilloscope.
 
 Homepage: http://204.232.211.48/redmine/projects/flashfit/
-
-
