--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-FlashFit version 0.2
+FlashFit version 0.3
 --------------------
 
 FlashFit interpretes data measured by oscilloscope.
 
-Homepage: http://204.232.211.48/redmine/projects/flashfit/
+Homepage: http://forge.klic.name/projects/flashfit/
