--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+== FlashFit 0.3
+Released 2010-03-22.
+
+- Information table can be moved by mouse.
+- The precision of rate constants can be set.
+- Ask before overwriting image file when exporting.
+- Better naming of fitting models.
+- Test file generators get_ab_cd, gen_abc, gen_ab.
+
 == FlashFit 0.2
 Released 2010-02-01.
 
