Do not use named parameter in TimeBarPair; Update NEWS for 0.5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-06-07  Karel Klíč  <kklic@redhat.com>
+
+	* gui_timebarpair.py (TimeBarPair.__init__): Do not use named parameters.
+	This flaw blocked Windows Python from running FlashFit.
+
+	* NEWS: Add changes from version 0.5.
+
 2010-06-05  Karel Klíč  <kklic@redhat.com>
 
 	* gui_residualsgraph.py (ResidualsGraph.resizeFromData): Update to keep up with other code changes.
