--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+== FlashFit 0.7
+Not yet released.
+
+- Improved and extended settings. The Appearance Dialog was splitted
+  into multiple smaller and more detailed dialogs.
+
 == FlashFit 0.6
 Released 2010-06-08.
 
