--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,11 @@
 - Previously, A0-Ainf data for every speed constant were displayed all
   together on single line. Now, the A0-Ainf data are properly
   separated by a newline character.
+- Previously, loading a data file under Microsoft Windows might have
+  failed because flashfit attempted to print debugging error messages
+  to standard output during the conversion of voltage to absorbance.
+  Now, no debugging error messages are printed, so files are loaded
+  without issues.
 
 == FlashFit 0.10
 Released 2012-02-17.
