--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 == FlashFit 0.11
+Released 2012-03-28.
 
 - Previously, A0-Ainf data for every speed constant were displayed all
   together on single line. Now, the A0-Ainf data are properly
